src/test/ui/malformed/malformed-plugin-1.stderr
error: attribute must be of the form `#[plugin(...)]`
  --> $DIR/malformed-plugin-1.rs:2:1
   |
LL | #![plugin] //~ ERROR attribute must be of the form `#[plugin(...)]`
   | ^^^^^^^^^^

error: aborting due to previous error

